--- a/partials/index.hbs
+++ b/partials/index.hbs
@@ -17,10 +17,12 @@
       {{!-- javascript --}}
       <script src="{{config.mountpoint}}/js/script-early.js"></script>
       <script src="{{config.mountpoint}}/js/htmx.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
-              defer></script>
-      <script src="{{config.mountpoint}}/js/script-late.js"
-              defer></script>
+      <script defer
+              src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
+      <script defer
+              src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+      <script defer
+              src="{{config.mountpoint}}/js/script-late.js"></script>
 </head>
 
 <body data-bs-theme="dark">
