--- a/raw/jukebox.css
+++ b/raw/jukebox.css
@@ -3,6 +3,20 @@
     --bs-list-group-active-border-color: var(--bs-warning-border-subtle);
 }
 
+.form-check-input:checked,
+.form-check-input:focus {
+    background-color: var(--bs-warning-border-subtle);
+    border-color: var(--bs-warning-border-subtle);
+}
+
+.form-check-input:focus {
+    box-shadow: 0 0 0 0.25rem rgba(from var(--bs-warning-border-subtle) r g b / 0.25);
+}
+
+.fs-7 {
+    font-size: 0.75rem;
+}
+
 #spinner> :first-child {
     animation: spin 2s linear infinite;
 }
