--- a/partials/admin.hbs
+++ b/partials/admin.hbs
@@ -18,8 +18,8 @@
                                 class="w-100"
                                 name="force">
                             <option value="basic">Basic</option>
-                            <option value="stats">Stats (1 hour)</option>
-                            <option value="all">All (1 day)</option>
+                            <option value="stats">Stats (~1 hour)</option>
+                            <option value="all">Force All (~1 day)</option>
                         </select>
                     </label>
                 {{/if}}
