--- a/partials/search/form.hbs
+++ b/partials/search/form.hbs
@@ -20,7 +20,7 @@ searchResults--}}
               hx-target=".search-results"
               hx-swap="outerHTML">
             <input id="iez4So"
-                   class="border border-3 fs-1 rounded-3 text-center border-warning-subtle"
+                   class="border border-3 fs-1 rounded-3 text-center border-warning-subtle w-100"
                    type="text"
                    name="path"
                    placeholder="Path contains"
@@ -37,13 +37,13 @@ searchResults--}}
               hx-target=".search-results"
               hx-swap="outerHTML">
             <input id="Cachu6"
-                   class="border border-3 fs-1 rounded-3 text-center border-warning-subtle"
+                   class="border border-3 fs-1 rounded-3 text-center border-warning-subtle w-100"
                    type="text"
                    name="artist"
                    placeholder="Artist contains"
                    value="{{search.artist}}">
             <input id="ruoR0s"
-                   class="border border-3 fs-1 rounded-3 text-center border-warning-subtle"
+                   class="border border-3 fs-1 rounded-3 text-center border-warning-subtle w-100"
                    type="text"
                    name="album"
                    placeholder="Album contains"
