--- a/partials/index.hbs
+++ b/partials/index.hbs
@@ -18,6 +18,8 @@
       <script src="{{config.mountpoint}}/js/script-early.js"></script>
       <script src="{{config.mountpoint}}/js/htmx.js"></script>
       <script defer
+              src="https://cdn.jsdelivr.net/npm/@alpinejs/intersect@3.x.x/dist/cdn.min.js"></script>
+      <script defer
               src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
       <script defer
               src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
