--- a/raw/jukebox.css
+++ b/raw/jukebox.css
@@ -17,6 +17,12 @@
     font-size: 0.75rem;
 }
 
+#task-messages {
+    max-height: 50vh;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+
 #spinner> :first-child {
     animation: spin 2s linear infinite;
 }
