container is goot

--- a/partials/body.hbs
+++ b/partials/body.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid"
+<div class="container"
      x-data="{ showAdmin: $persist(false).as('showAdmin'), useId3: $persist(false).as('useId3') }">
     {{> header}}
     {{> main}}
